// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route calculation tests Calculate route from route coordinates 1`] = `
Object {
  "_tag": "Some",
  "value": Object {
    "averageTime": 126,
    "bigBuffer": Object {
      "geometry": Object {
        "coordinates": Array [
          Array [
            Array [
              19.96307010053347,
              47.83697055255689,
            ],
            Array [
              19.96207921933897,
              47.837204154445196,
            ],
            Array [
              19.960063224012394,
              47.83788057247017,
            ],
            Array [
              19.959439224012396,
              47.83816059952445,
            ],
            Array [
              19.959195975293742,
              47.838308119771256,
            ],
            Array [
              19.958544724742698,
              47.83834322310612,
            ],
            Array [
              19.956850598195494,
              47.83866588298399,
            ],
            Array [
              19.955282804656044,
              47.839204182807734,
            ],
            Array [
              19.95390159355083,
              47.83993742970864,
            ],
            Array [
              19.95276004404805,
              47.840837437849096,
            ],
            Array [
              19.951902025254896,
              47.841869612741114,
            ],
            Array [
              19.951360510352405,
              47.84299428186228,
            ],
            Array [
              19.9511563094546,
              47.84416822025644,
            ],
            Array [
              19.951297269887462,
              47.84534631233752,
            ],
            Array [
              19.95177797462061,
              47.84648328592909,
            ],
            Array [
              19.952579950440736,
              47.84753545185958,
            ],
            Array [
              19.95367237786682,
              47.84846238229065,
            ],
            Array [
              19.955013275525516,
              47.84922846337594,
            ],
            Array [
              19.956551113471793,
              47.849804262728675,
            ],
            Array [
              19.957374547685045,
              47.8499828372325,
            ],
            Array [
              19.958310945866568,
              47.85032741742559,
            ],
            Array [
              19.960342685088836,
              47.850699749342894,
            ],
            Array [
              19.96059068508884,
              47.8507247464694,
            ],
            Array [
              19.96206879158262,
              47.85079084507497,
            ],
            Array [
              19.963542987762608,
              47.8506930299454,
            ],
            Array [
              19.96395798776261,
              47.85064203577611,
            ],
            Array [
              19.965530758256644,
              47.85034753483892,
            ],
            Array [
              19.966998107275522,
              47.84986684496231,
            ],
            Array [
              19.96831155414923,
              47.8492158430606,
            ],
            Array [
              19.96881055414923,
              47.84891786893601,
            ],
            Array [
              19.969293820514793,
              47.84857540503688,
            ],
            Array [
              19.970263758007516,
              47.848422864297795,
            ],
            Array [
              19.97181221750631,
              47.847959814497635,
            ],
            Array [
              19.973187334714513,
              47.847317316042144,
            ],
            Array [
              19.973393589407802,
              47.84724200870165,
            ],
            Array [
              19.97446724116857,
              47.846696122108675,
            ],
            Array [
              19.975400241168565,
              47.846143170284336,
            ],
            Array [
              19.975549928204348,
              47.8460355409224,
            ],
            Array [
              19.977161689703674,
              47.84543399532313,
            ],
            Array [
              19.977187686352696,
              47.845421682294145,
            ],
            Array [
              19.977906738363075,
              47.84529696889417,
            ],
            Array [
              19.979493007478165,
              47.844783694349545,
            ],
            Array [
              19.980899595235687,
              47.84407257960208,
            ],
            Array [
              19.98207244725694,
              47.84319094491526,
            ],
            Array [
              19.98296649149649,
              47.84217266328583,
            ],
            Array [
              19.983547370335604,
              47.84105685990018,
            ],
            Array [
              19.983792760926242,
              47.83988640961154,
            ],
            Array [
              19.98369323304564,
              47.83870629002102,
            ],
            Array [
              19.983574843045638,
              47.838196790895964,
            ],
            Array [
              19.98325666511998,
              47.83729226119226,
            ],
            Array [
              19.983139665119985,
              47.83704625249757,
            ],
            Array [
              19.982800664815564,
              47.83648575976843,
            ],
            Array [
              19.982692011654336,
              47.8359726750396,
            ],
            Array [
              19.98222787918869,
              47.83500174991142,
            ],
            Array [
              19.981937800495142,
              47.83462754980022,
            ],
            Array [
              19.981288911502244,
              47.8337064326598,
            ],
            Array [
              19.98025604706446,
              47.83276674519852,
            ],
            Array [
              19.97897274167875,
              47.83197830473895,
            ],
            Array [
              19.97748712202259,
              47.83137068694662,
            ],
            Array [
              19.975854901988285,
              47.83096668544692,
            ],
            Array [
              19.974137293293676,
              47.83078145602488,
            ],
            Array [
              19.972398709912714,
              47.83082194752722,
            ],
            Array [
              19.97203870991271,
              47.83085395121395,
            ],
            Array [
              19.970389942306355,
              47.831108402177684,
            ],
            Array [
              19.96884147802745,
              47.83156586176582,
            ],
            Array [
              19.96744823678996,
              47.83221010006807,
            ],
            Array [
              19.967195968909934,
              47.8323816243116,
            ],
            Array [
              19.966326325605458,
              47.83287617398139,
            ],
            Array [
              19.965220829457298,
              47.83381424815377,
            ],
            Array [
              19.964375829457296,
              47.834699303651675,
            ],
            Array [
              19.96361198582209,
              47.83569080991227,
            ],
            Array [
              19.963133478692775,
              47.836759814408396,
            ],
            Array [
              19.96307010053347,
              47.83697055255689,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "properties": Object {},
      "type": "Feature",
    },
    "bounds": Object {
      "NorthEast": Object {
        "lat": 47.844763,
        "lon": 19.97481739,
      },
      "SouthWest": Object {
        "lat": 47.8368,
        "lon": 19.960138,
      },
    },
    "currentTime": 126,
    "difficulty": 1,
    "distance": 2000,
    "downhill": 120,
    "endPoint": Object {
      "elevation": 452.893,
      "lat": 47.83963549,
      "lon": 19.97481739,
    },
    "isRoundTrip": false,
    "poiSearchBox": Object {
      "NorthEast": Object {
        "lat": 47.85079084507497,
        "lon": 19.983792760926242,
      },
      "SouthWest": Object {
        "lat": 47.83078145602488,
        "lon": 19.9511563094546,
      },
    },
    "score": 43,
    "smallBuffer": Object {
      "geometry": Object {
        "coordinates": Array [
          Array [
            Array [
              19.9605948104292,
              47.844960780568044,
            ],
            Array [
              19.961155723408062,
              47.84522900627216,
            ],
            Array [
              19.961340394586657,
              47.84529696884842,
            ],
            Array [
              19.961543568508883,
              47.845334205771884,
            ],
            Array [
              19.961791568508882,
              47.84535920548452,
            ],
            Array [
              19.961939379158263,
              47.84536581603271,
            ],
            Array [
              19.962086798776262,
              47.84535603350486,
            ],
            Array [
              19.962501798776263,
              47.84530503408795,
            ],
            Array [
              19.962659075825666,
              47.84527558103889,
            ],
            Array [
              19.962805810727556,
              47.845227507550824,
            ],
            Array [
              19.962937155414927,
              47.84516240190505,
            ],
            Array [
              19.96343615541492,
              47.844864404492604,
            ],
            Array [
              19.963541589910236,
              47.84478968330431,
            ],
            Array [
              19.96456383860138,
              47.843928551451135,
            ],
            Array [
              19.96479620513565,
              47.843803776933974,
            ],
            Array [
              19.96492747143714,
              47.84371706033944,
            ],
            Array [
              19.965040657618907,
              47.84362513321702,
            ],
            Array [
              19.96546084896944,
              47.8434365876257,
            ],
            Array [
              19.966435166004498,
              47.84320691836675,
            ],
            Array [
              19.966655637680272,
              47.84320691836675,
            ],
            Array [
              19.967182469737068,
              47.84329430656964,
            ],
            Array [
              19.967350144856535,
              47.84331106102916,
            ],
            Array [
              19.967519524210555,
              47.84330637479663,
            ],
            Array [
              19.967684575800753,
              47.84328041475413,
            ],
            Array [
              19.96783942175063,
              47.84323410536914,
            ],
            Array [
              19.967978547630626,
              47.843169095776446,
            ],
            Array [
              19.96809699883994,
              47.843087701055794,
            ],
            Array [
              19.968145685229665,
              47.84304722057485,
            ],
            Array [
              19.968258906198276,
              47.843004128940755,
            ],
            Array [
              19.968370522616677,
              47.84294414202357,
            ],
            Array [
              19.968554018038397,
              47.84282828419753,
            ],
            Array [
              19.96888993845614,
              47.842726727897585,
            ],
            Array [
              19.969008258940782,
              47.84268352312617,
            ],
            Array [
              19.969115624116856,
              47.84262892992788,
            ],
            Array [
              19.970048624116856,
              47.8420759347455,
            ],
            Array [
              19.970166679971943,
              47.841991042491316,
            ],
            Array [
              19.970258298533572,
              47.84189253445969,
            ],
            Array [
              19.970320081155936,
              47.84178406479915,
            ],
            Array [
              19.97036698676173,
              47.84166973304156,
            ],
            Array [
              19.970464703954985,
              47.84162029836991,
            ],
            Array [
              19.97058921085211,
              47.84152356260109,
            ],
            Array [
              19.97070779060027,
              47.84140878171489,
            ],
            Array [
              19.970849459081524,
              47.84136426587296,
            ],
            Array [
              19.970979430385853,
              47.841302609903174,
            ],
            Array [
              19.971091150427604,
              47.841226526621355,
            ],
            Array [
              19.97118111228339,
              47.84113840424537,
            ],
            Array [
              19.971328295711928,
              47.8409626291962,
            ],
            Array [
              19.971352559731365,
              47.840972382629644,
            ],
            Array [
              19.97158655973136,
              47.84104938182611,
            ],
            Array [
              19.97176694434387,
              47.84109341003996,
            ],
            Array [
              19.971957147158022,
              47.841110711935,
            ],
            Array [
              19.972148484609683,
              47.84110049763317,
            ],
            Array [
              19.972332221333712,
              47.84106323344473,
            ],
            Array [
              19.972499968970368,
              47.84100062058213,
            ],
            Array [
              19.972594968970366,
              47.840955621009435,
            ],
            Array [
              19.97272411245458,
              47.84088120097126,
            ],
            Array [
              19.972830023294726,
              47.84079176660364,
            ],
            Array [
              19.972908899077737,
              47.84069052871248,
            ],
            Array [
              19.9729579080037,
              47.84058112188478,
            ],
            Array [
              19.97297529055319,
              47.84046747400782,
            ],
            Array [
              19.972960422657582,
              47.84035366525566,
            ],
            Array [
              19.972913838104347,
              47.840243781604556,
            ],
            Array [
              19.972837209373033,
              47.84014176813657,
            ],
            Array [
              19.97265047808124,
              47.83994268388048,
            ],
            Array [
              19.97258623574404,
              47.839787065409254,
            ],
            Array [
              19.972634256869608,
              47.839650609506165,
            ],
            Array [
              19.972653155278312,
              47.83957653388291,
            ],
            Array [
              19.972721155278307,
              47.839152534410296,
            ],
            Array [
              19.97271914581694,
              47.83901197322424,
            ],
            Array [
              19.9726487515709,
              47.83864022813671,
            ],
            Array [
              19.97278621694018,
              47.838183156895575,
            ],
            Array [
              19.97309926899906,
              47.83785528901909,
            ],
            Array [
              19.973121642332096,
              47.837932381648045,
            ],
            Array [
              19.97324412349619,
              47.83817379328067,
            ],
            Array [
              19.97322258984334,
              47.838267939035504,
            ],
            Array [
              19.973234633036398,
              47.83839700779491,
            ],
            Array [
              19.973287402274277,
              47.83852138398699,
            ],
            Array [
              19.973494402274277,
              47.83886438249035,
            ],
            Array [
              19.97359358733706,
              47.83898617825779,
            ],
            Array [
              19.973768442572876,
              47.83915211831312,
            ],
            Array [
              19.973822116423253,
              47.83926497057707,
            ],
            Array [
              19.973929805695438,
              47.839728409082575,
            ],
            Array [
              19.973973867850557,
              47.83984284910759,
            ],
            Array [
              19.97405034608883,
              47.839949320218835,
            ],
            Array [
              19.974156301394448,
              47.84004373085209,
            ],
            Array [
              19.974287661964432,
              47.840122452934445,
            ],
            Array [
              19.974439379685748,
              47.8401824612977,
            ],
            Array [
              19.97460562413145,
              47.84022144992219,
            ],
            Array [
              19.974780006620723,
              47.840237920545384,
            ],
            Array [
              19.974955825732295,
              47.84023124023194,
            ],
            Array [
              19.975126324836303,
              47.84020166569376,
            ],
            Array [
              19.975284951747817,
              47.84015033342609,
            ],
            Array [
              19.97542561052357,
              47.84007921603831,
            ],
            Array [
              19.97554289572569,
              47.83999104645698,
            ],
            Array [
              19.97563230014965,
              47.83988921291237,
            ],
            Array [
              19.97569038803356,
              47.83977762874242,
            ],
            Array [
              19.975714927092625,
              47.83966058201575,
            ],
            Array [
              19.975704974304566,
              47.83954257075099,
            ],
            Array [
              19.975586584304565,
              47.839033079838494,
            ],
            Array [
              19.975554766511998,
              47.83894262903572,
            ],
            Array [
              19.975437766512,
              47.83869662816625,
            ],
            Array [
              19.97538601757468,
              47.83861107117005,
            ],
            Array [
              19.975315412662944,
              47.83853182102965,
            ],
            Array [
              19.975120517879738,
              47.83834686091934,
            ],
            Array [
              19.975060268649187,
              47.838247027327,
            ],
            Array [
              19.97507548894922,
              47.83818442980309,
            ],
            Array [
              19.97506947360976,
              47.83806650243118,
            ],
            Array [
              19.975029357667903,
              47.83795161915225,
            ],
            Array [
              19.97486193958522,
              47.837621634696745,
            ],
            Array [
              19.97483387931263,
              47.837288919553636,
            ],
            Array [
              19.97481250116543,
              47.83718796908534,
            ],
            Array [
              19.974766087918873,
              47.837090879664174,
            ],
            Array [
              19.974695966767335,
              47.83700042760722,
            ],
            Array [
              19.97456597346665,
              47.83686261971945,
            ],
            Array [
              19.97442346003821,
              47.83659621556948,
            ],
            Array [
              19.974349091150224,
              47.83649065156563,
            ],
            Array [
              19.974245804706445,
              47.83639668862718,
            ],
            Array [
              19.97411747416788,
              47.83631785063558,
            ],
            Array [
              19.973968912202263,
              47.83625709425771,
            ],
            Array [
              19.97380569019883,
              47.83621669805341,
            ],
            Array [
              19.97363392932937,
              47.83619817701489,
            ],
            Array [
              19.973460070991276,
              47.83620222574389,
            ],
            Array [
              19.973100070991272,
              47.83623422611256,
            ],
            Array [
              19.972935194230637,
              47.83625966862698,
            ],
            Array [
              19.972780347802747,
              47.83630541022624,
            ],
            Array [
              19.972641023679,
              47.836369828532334,
            ],
            Array [
              19.972522163297903,
              47.83645063874285,
            ],
            Array [
              19.972453580144993,
              47.836507022484696,
            ],
            Array [
              19.972430203151546,
              47.83651374602431,
            ],
            Array [
              19.97227418896549,
              47.83657152273711,
            ],
            Array [
              19.972138232560546,
              47.836648832636676,
            ],
            Array [
              19.97202768294573,
              47.83674263399686,
            ],
            Array [
              19.97118268294573,
              47.837627639546625,
            ],
            Array [
              19.97110629858221,
              47.837726785429595,
            ],
            Array [
              19.971058447869275,
              47.837833682675615,
            ],
            Array [
              19.970858447869272,
              47.83849868420494,
            ],
            Array [
              19.970841279277543,
              47.838596065806,
            ],
            Array [
              19.970847854183056,
              47.83869402735305,
            ],
            Array [
              19.970923560659433,
              47.83909382528368,
            ],
            Array [
              19.970883099643668,
              47.83934611200646,
            ],
            Array [
              19.97084307324486,
              47.83935124001687,
            ],
            Array [
              19.97068371762608,
              47.839393950398716,
            ],
            Array [
              19.970539368105946,
              47.839456219197515,
            ],
            Array [
              19.970415291438574,
              47.83953577440077,
            ],
            Array [
              19.970316014700327,
              47.83962971327575,
            ],
            Array [
              19.97024516011433,
              47.83973460828921,
            ],
            Array [
              19.97020531288962,
              47.83984663217481,
            ],
            Array [
              19.970199850468916,
              47.83993173053203,
            ],
            Array [
              19.970009212414173,
              47.84009245199042,
            ],
            Array [
              19.96992888771661,
              47.840172591937204,
            ],
            Array [
              19.969773574533566,
              47.84035807882149,
            ],
            Array [
              19.969659192964535,
              47.8403953267175,
            ],
            Array [
              19.9695135256657,
              47.840470712981876,
            ],
            Array [
              19.969393789147887,
              47.84056443332229,
            ],
            Array [
              19.969276670311324,
              47.84067780194586,
            ],
            Array [
              19.96916590747316,
              47.84071142583116,
            ],
            Array [
              19.969023560011195,
              47.84077959333026,
            ],
            Array [
              19.968903585383455,
              47.84086497907654,
            ],
            Array [
              19.968810529644582,
              47.84096434757432,
            ],
            Array [
              19.968747918844063,
              47.84107393350363,
            ],
            Array [
              19.968658916652075,
              47.84129087737784,
            ],
            Array [
              19.96802820112628,
              47.84166471288455,
            ],
            Array [
              19.96767906154386,
              47.84177026779225,
            ],
            Array [
              19.967548923322052,
              47.841818683370896,
            ],
            Array [
              19.96743247738332,
              47.841880852692796,
            ],
            Array [
              19.96724462805198,
              47.841999461712355,
            ],
            Array [
              19.967196477894323,
              47.84201452560157,
            ],
            Array [
              19.96712723814337,
              47.84204302136541,
            ],
            Array [
              19.96698053026293,
              47.842018685641506,
            ],
            Array [
              19.966765,
              47.84200107462572,
            ],
            Array [
              19.966282,
              47.84200107462572,
            ],
            Array [
              19.96613101298067,
              47.842009652070686,
            ],
            Array [
              19.965984321933895,
              47.842035140346624,
            ],
            Array [
              19.964758321933896,
              47.842324143515775,
            ],
            Array [
              19.964556722401237,
              47.842391779039914,
            ],
            Array [
              19.96393272240124,
              47.84267178174534,
            ],
            Array [
              19.963739528562865,
              47.84278893563243,
            ],
            Array [
              19.96360150371365,
              47.84290103791454,
            ],
            Array [
              19.963362794864352,
              47.843029220309084,
            ],
            Array [
              19.96322141008976,
              47.8431243073551,
            ],
            Array [
              19.962184358944803,
              47.84399792208362,
            ],
            Array [
              19.961958944416864,
              47.84413253966666,
            ],
            Array [
              19.96148727659194,
              47.84390698586159,
            ],
            Array [
              19.961329616850623,
              47.84384669492193,
            ],
            Array [
              19.96115712065442,
              47.84380889864562,
            ],
            Array [
              19.96032912065442,
              47.843687897271415,
            ],
            Array [
              19.96015420799645,
              47.84367419221338,
            ],
            Array [
              19.95997867247427,
              47.843683652852455,
            ],
            Array [
              19.95980925981955,
              47.84371591560917,
            ],
            Array [
              19.959652480465603,
              47.843769740603015,
            ],
            Array [
              19.959514359355083,
              47.84384305930659,
            ],
            Array [
              19.959400204404805,
              47.84393305404752,
            ],
            Array [
              19.95931440252549,
              47.84403626630159,
            ],
            Array [
              19.95926025103524,
              47.844148729613565,
            ],
            Array [
              19.959239830945457,
              47.84426612203589,
            ],
            Array [
              19.959253926988744,
              47.8443839322257,
            ],
            Array [
              19.95930199746206,
              47.84449763281589,
            ],
            Array [
              19.959382195044075,
              47.84460285439739,
            ],
            Array [
              19.95949143778668,
              47.84469555342691,
            ],
            Array [
              19.95962552755255,
              47.84477216760844,
            ],
            Array [
              19.95977931134718,
              47.844829752778764,
            ],
            Array [
              19.959946879345576,
              47.84486609603827,
            ],
            Array [
              19.9605948104292,
              47.844960780568044,
            ],
          ],
        ],
        "type": "Polygon",
      },
      "properties": Object {},
      "type": "Feature",
    },
    "startPoint": Object {
      "elevation": 507.86468,
      "lat": 47.844277,
      "lon": 19.960138,
    },
    "track": Object {
      "geometry": Object {
        "coordinates": Array [
          Array [
            19.960138,
            47.844277,
            507.86468,
          ],
          Array [
            19.960966,
            47.844398,
            507.86468,
          ],
          Array [
            19.961677,
            47.844738,
            510.82683,
          ],
          Array [
            19.961925,
            47.844763,
            511.86159,
          ],
          Array [
            19.96234,
            47.844712,
            513.6415,
          ],
          Array [
            19.962839,
            47.844414,
            514.01338,
          ],
          Array [
            19.963924,
            47.8435,
            508.0311,
          ],
          Array [
            19.964235,
            47.843333,
            507.4217,
          ],
          Array [
            19.964432,
            47.843173,
            505.55983,
          ],
          Array [
            19.965056,
            47.842893,
            500.86863,
          ],
          Array [
            19.966282,
            47.842604,
            493.08466,
          ],
          Array [
            19.966765,
            47.842604,
            490.70485,
          ],
          Array [
            19.967398,
            47.842709,
            488.02781,
          ],
          Array [
            19.967576,
            47.842561,
            483.8412,
          ],
          Array [
            19.967755,
            47.842505,
            481.79085,
          ],
          Array [
            19.968048,
            47.84232,
            476.53015,
          ],
          Array [
            19.968521,
            47.842177,
            472.30818,
          ],
          Array [
            19.969454,
            47.841624,
            457.39057,
          ],
          Array [
            19.969614,
            47.841234,
            449.36496,
          ],
          Array [
            19.969851,
            47.84118,
            446.89692,
          ],
          Array [
            19.970132,
            47.840908,
            439.28796,
          ],
          Array [
            19.970398,
            47.840843,
            435.73038,
          ],
          Array [
            19.970712,
            47.840468,
            424.57916,
          ],
          Array [
            19.970986,
            47.840237,
            417.70967,
          ],
          Array [
            19.971107,
            47.840083,
            414.42057,
          ],
          Array [
            19.971095,
            47.83993,
            412.49989,
          ],
          Array [
            19.971387,
            47.840086,
            413.72731,
          ],
          Array [
            19.971748,
            47.840431,
            419.11002,
          ],
          Array [
            19.971982,
            47.840508,
            420.93228,
          ],
          Array [
            19.972077,
            47.840463,
            421.24784,
          ],
          Array [
            19.97182,
            47.840189,
            417.03635,
          ],
          Array [
            19.97182,
            47.840189,
            417.03635,
          ],
          Array [
            19.971659,
            47.839799,
            413.04688,
          ],
          Array [
            19.97176,
            47.839512,
            414.50614,
          ],
          Array [
            19.971828,
            47.839088,
            415.05464,
          ],
          Array [
            19.971739,
            47.838618,
            409.62211,
          ],
          Array [
            19.971939,
            47.837953,
            408.9397,
          ],
          Array [
            19.972784,
            47.837068,
            411.14911,
          ],
          Array [
            19.972784,
            47.837068,
            411.14911,
          ],
          Array [
            19.97301,
            47.837003,
            411.03913,
          ],
          Array [
            19.973218,
            47.836832,
            408.03474,
          ],
          Array [
            19.973578,
            47.8368,
            407.19849,
          ],
          Array [
            19.973754,
            47.837129,
            413.89729,
          ],
          Array [
            19.973937,
            47.837323,
            417.91868,
          ],
          Array [
            19.973972,
            47.837738,
            427.98568,
          ],
          Array [
            19.974179,
            47.838146,
            437.43456,
          ],
          Array [
            19.974179,
            47.838146,
            437.43456,
          ],
          Array [
            19.97412,
            47.838295,
            441.40978,
          ],
          Array [
            19.974327,
            47.838638,
            447.34857,
          ],
          Array [
            19.974582,
            47.83888,
            449.41355,
          ],
          Array [
            19.974699,
            47.839126,
            452.893,
          ],
          Array [
            19.97481739,
            47.83963549,
            452.893,
          ],
        ],
        "type": "LineString",
      },
      "properties": Object {},
      "type": "Feature",
    },
    "uphill": 65,
  },
}
`;

exports[`Route calculation tests toRouteData 1`] = `
Object {
  "_tag": "Some",
  "value": Object {
    "averageTime": 126,
    "bigBuffer": Array [
      Array [
        Array [
          19.96307010053347,
          47.83697055255689,
        ],
        Array [
          19.96207921933897,
          47.837204154445196,
        ],
        Array [
          19.960063224012394,
          47.83788057247017,
        ],
        Array [
          19.959439224012396,
          47.83816059952445,
        ],
        Array [
          19.959195975293742,
          47.838308119771256,
        ],
        Array [
          19.958544724742698,
          47.83834322310612,
        ],
        Array [
          19.956850598195494,
          47.83866588298399,
        ],
        Array [
          19.955282804656044,
          47.839204182807734,
        ],
        Array [
          19.95390159355083,
          47.83993742970864,
        ],
        Array [
          19.95276004404805,
          47.840837437849096,
        ],
        Array [
          19.951902025254896,
          47.841869612741114,
        ],
        Array [
          19.951360510352405,
          47.84299428186228,
        ],
        Array [
          19.9511563094546,
          47.84416822025644,
        ],
        Array [
          19.951297269887462,
          47.84534631233752,
        ],
        Array [
          19.95177797462061,
          47.84648328592909,
        ],
        Array [
          19.952579950440736,
          47.84753545185958,
        ],
        Array [
          19.95367237786682,
          47.84846238229065,
        ],
        Array [
          19.955013275525516,
          47.84922846337594,
        ],
        Array [
          19.956551113471793,
          47.849804262728675,
        ],
        Array [
          19.957374547685045,
          47.8499828372325,
        ],
        Array [
          19.958310945866568,
          47.85032741742559,
        ],
        Array [
          19.960342685088836,
          47.850699749342894,
        ],
        Array [
          19.96059068508884,
          47.8507247464694,
        ],
        Array [
          19.96206879158262,
          47.85079084507497,
        ],
        Array [
          19.963542987762608,
          47.8506930299454,
        ],
        Array [
          19.96395798776261,
          47.85064203577611,
        ],
        Array [
          19.965530758256644,
          47.85034753483892,
        ],
        Array [
          19.966998107275522,
          47.84986684496231,
        ],
        Array [
          19.96831155414923,
          47.8492158430606,
        ],
        Array [
          19.96881055414923,
          47.84891786893601,
        ],
        Array [
          19.969293820514793,
          47.84857540503688,
        ],
        Array [
          19.970263758007516,
          47.848422864297795,
        ],
        Array [
          19.97181221750631,
          47.847959814497635,
        ],
        Array [
          19.973187334714513,
          47.847317316042144,
        ],
        Array [
          19.973393589407802,
          47.84724200870165,
        ],
        Array [
          19.97446724116857,
          47.846696122108675,
        ],
        Array [
          19.975400241168565,
          47.846143170284336,
        ],
        Array [
          19.975549928204348,
          47.8460355409224,
        ],
        Array [
          19.977161689703674,
          47.84543399532313,
        ],
        Array [
          19.977187686352696,
          47.845421682294145,
        ],
        Array [
          19.977906738363075,
          47.84529696889417,
        ],
        Array [
          19.979493007478165,
          47.844783694349545,
        ],
        Array [
          19.980899595235687,
          47.84407257960208,
        ],
        Array [
          19.98207244725694,
          47.84319094491526,
        ],
        Array [
          19.98296649149649,
          47.84217266328583,
        ],
        Array [
          19.983547370335604,
          47.84105685990018,
        ],
        Array [
          19.983792760926242,
          47.83988640961154,
        ],
        Array [
          19.98369323304564,
          47.83870629002102,
        ],
        Array [
          19.983574843045638,
          47.838196790895964,
        ],
        Array [
          19.98325666511998,
          47.83729226119226,
        ],
        Array [
          19.983139665119985,
          47.83704625249757,
        ],
        Array [
          19.982800664815564,
          47.83648575976843,
        ],
        Array [
          19.982692011654336,
          47.8359726750396,
        ],
        Array [
          19.98222787918869,
          47.83500174991142,
        ],
        Array [
          19.981937800495142,
          47.83462754980022,
        ],
        Array [
          19.981288911502244,
          47.8337064326598,
        ],
        Array [
          19.98025604706446,
          47.83276674519852,
        ],
        Array [
          19.97897274167875,
          47.83197830473895,
        ],
        Array [
          19.97748712202259,
          47.83137068694662,
        ],
        Array [
          19.975854901988285,
          47.83096668544692,
        ],
        Array [
          19.974137293293676,
          47.83078145602488,
        ],
        Array [
          19.972398709912714,
          47.83082194752722,
        ],
        Array [
          19.97203870991271,
          47.83085395121395,
        ],
        Array [
          19.970389942306355,
          47.831108402177684,
        ],
        Array [
          19.96884147802745,
          47.83156586176582,
        ],
        Array [
          19.96744823678996,
          47.83221010006807,
        ],
        Array [
          19.967195968909934,
          47.8323816243116,
        ],
        Array [
          19.966326325605458,
          47.83287617398139,
        ],
        Array [
          19.965220829457298,
          47.83381424815377,
        ],
        Array [
          19.964375829457296,
          47.834699303651675,
        ],
        Array [
          19.96361198582209,
          47.83569080991227,
        ],
        Array [
          19.963133478692775,
          47.836759814408396,
        ],
        Array [
          19.96307010053347,
          47.83697055255689,
        ],
      ],
    ],
    "bounds": Object {
      "NorthEast": Object {
        "lat": 47.844763,
        "lon": 19.97481739,
      },
      "SouthWest": Object {
        "lat": 47.8368,
        "lon": 19.960138,
      },
    },
    "difficulty": 1,
    "distance": 2000,
    "downhill": 120,
    "isRoundTrip": false,
    "poiSearchBox": Object {
      "NorthEast": Object {
        "lat": 47.85079084507497,
        "lon": 19.983792760926242,
      },
      "SouthWest": Object {
        "lat": 47.83078145602488,
        "lon": 19.9511563094546,
      },
    },
    "score": 43,
    "smallBuffer": Array [
      Array [
        Array [
          19.9605948104292,
          47.844960780568044,
        ],
        Array [
          19.961155723408062,
          47.84522900627216,
        ],
        Array [
          19.961340394586657,
          47.84529696884842,
        ],
        Array [
          19.961543568508883,
          47.845334205771884,
        ],
        Array [
          19.961791568508882,
          47.84535920548452,
        ],
        Array [
          19.961939379158263,
          47.84536581603271,
        ],
        Array [
          19.962086798776262,
          47.84535603350486,
        ],
        Array [
          19.962501798776263,
          47.84530503408795,
        ],
        Array [
          19.962659075825666,
          47.84527558103889,
        ],
        Array [
          19.962805810727556,
          47.845227507550824,
        ],
        Array [
          19.962937155414927,
          47.84516240190505,
        ],
        Array [
          19.96343615541492,
          47.844864404492604,
        ],
        Array [
          19.963541589910236,
          47.84478968330431,
        ],
        Array [
          19.96456383860138,
          47.843928551451135,
        ],
        Array [
          19.96479620513565,
          47.843803776933974,
        ],
        Array [
          19.96492747143714,
          47.84371706033944,
        ],
        Array [
          19.965040657618907,
          47.84362513321702,
        ],
        Array [
          19.96546084896944,
          47.8434365876257,
        ],
        Array [
          19.966435166004498,
          47.84320691836675,
        ],
        Array [
          19.966655637680272,
          47.84320691836675,
        ],
        Array [
          19.967182469737068,
          47.84329430656964,
        ],
        Array [
          19.967350144856535,
          47.84331106102916,
        ],
        Array [
          19.967519524210555,
          47.84330637479663,
        ],
        Array [
          19.967684575800753,
          47.84328041475413,
        ],
        Array [
          19.96783942175063,
          47.84323410536914,
        ],
        Array [
          19.967978547630626,
          47.843169095776446,
        ],
        Array [
          19.96809699883994,
          47.843087701055794,
        ],
        Array [
          19.968145685229665,
          47.84304722057485,
        ],
        Array [
          19.968258906198276,
          47.843004128940755,
        ],
        Array [
          19.968370522616677,
          47.84294414202357,
        ],
        Array [
          19.968554018038397,
          47.84282828419753,
        ],
        Array [
          19.96888993845614,
          47.842726727897585,
        ],
        Array [
          19.969008258940782,
          47.84268352312617,
        ],
        Array [
          19.969115624116856,
          47.84262892992788,
        ],
        Array [
          19.970048624116856,
          47.8420759347455,
        ],
        Array [
          19.970166679971943,
          47.841991042491316,
        ],
        Array [
          19.970258298533572,
          47.84189253445969,
        ],
        Array [
          19.970320081155936,
          47.84178406479915,
        ],
        Array [
          19.97036698676173,
          47.84166973304156,
        ],
        Array [
          19.970464703954985,
          47.84162029836991,
        ],
        Array [
          19.97058921085211,
          47.84152356260109,
        ],
        Array [
          19.97070779060027,
          47.84140878171489,
        ],
        Array [
          19.970849459081524,
          47.84136426587296,
        ],
        Array [
          19.970979430385853,
          47.841302609903174,
        ],
        Array [
          19.971091150427604,
          47.841226526621355,
        ],
        Array [
          19.97118111228339,
          47.84113840424537,
        ],
        Array [
          19.971328295711928,
          47.8409626291962,
        ],
        Array [
          19.971352559731365,
          47.840972382629644,
        ],
        Array [
          19.97158655973136,
          47.84104938182611,
        ],
        Array [
          19.97176694434387,
          47.84109341003996,
        ],
        Array [
          19.971957147158022,
          47.841110711935,
        ],
        Array [
          19.972148484609683,
          47.84110049763317,
        ],
        Array [
          19.972332221333712,
          47.84106323344473,
        ],
        Array [
          19.972499968970368,
          47.84100062058213,
        ],
        Array [
          19.972594968970366,
          47.840955621009435,
        ],
        Array [
          19.97272411245458,
          47.84088120097126,
        ],
        Array [
          19.972830023294726,
          47.84079176660364,
        ],
        Array [
          19.972908899077737,
          47.84069052871248,
        ],
        Array [
          19.9729579080037,
          47.84058112188478,
        ],
        Array [
          19.97297529055319,
          47.84046747400782,
        ],
        Array [
          19.972960422657582,
          47.84035366525566,
        ],
        Array [
          19.972913838104347,
          47.840243781604556,
        ],
        Array [
          19.972837209373033,
          47.84014176813657,
        ],
        Array [
          19.97265047808124,
          47.83994268388048,
        ],
        Array [
          19.97258623574404,
          47.839787065409254,
        ],
        Array [
          19.972634256869608,
          47.839650609506165,
        ],
        Array [
          19.972653155278312,
          47.83957653388291,
        ],
        Array [
          19.972721155278307,
          47.839152534410296,
        ],
        Array [
          19.97271914581694,
          47.83901197322424,
        ],
        Array [
          19.9726487515709,
          47.83864022813671,
        ],
        Array [
          19.97278621694018,
          47.838183156895575,
        ],
        Array [
          19.97309926899906,
          47.83785528901909,
        ],
        Array [
          19.973121642332096,
          47.837932381648045,
        ],
        Array [
          19.97324412349619,
          47.83817379328067,
        ],
        Array [
          19.97322258984334,
          47.838267939035504,
        ],
        Array [
          19.973234633036398,
          47.83839700779491,
        ],
        Array [
          19.973287402274277,
          47.83852138398699,
        ],
        Array [
          19.973494402274277,
          47.83886438249035,
        ],
        Array [
          19.97359358733706,
          47.83898617825779,
        ],
        Array [
          19.973768442572876,
          47.83915211831312,
        ],
        Array [
          19.973822116423253,
          47.83926497057707,
        ],
        Array [
          19.973929805695438,
          47.839728409082575,
        ],
        Array [
          19.973973867850557,
          47.83984284910759,
        ],
        Array [
          19.97405034608883,
          47.839949320218835,
        ],
        Array [
          19.974156301394448,
          47.84004373085209,
        ],
        Array [
          19.974287661964432,
          47.840122452934445,
        ],
        Array [
          19.974439379685748,
          47.8401824612977,
        ],
        Array [
          19.97460562413145,
          47.84022144992219,
        ],
        Array [
          19.974780006620723,
          47.840237920545384,
        ],
        Array [
          19.974955825732295,
          47.84023124023194,
        ],
        Array [
          19.975126324836303,
          47.84020166569376,
        ],
        Array [
          19.975284951747817,
          47.84015033342609,
        ],
        Array [
          19.97542561052357,
          47.84007921603831,
        ],
        Array [
          19.97554289572569,
          47.83999104645698,
        ],
        Array [
          19.97563230014965,
          47.83988921291237,
        ],
        Array [
          19.97569038803356,
          47.83977762874242,
        ],
        Array [
          19.975714927092625,
          47.83966058201575,
        ],
        Array [
          19.975704974304566,
          47.83954257075099,
        ],
        Array [
          19.975586584304565,
          47.839033079838494,
        ],
        Array [
          19.975554766511998,
          47.83894262903572,
        ],
        Array [
          19.975437766512,
          47.83869662816625,
        ],
        Array [
          19.97538601757468,
          47.83861107117005,
        ],
        Array [
          19.975315412662944,
          47.83853182102965,
        ],
        Array [
          19.975120517879738,
          47.83834686091934,
        ],
        Array [
          19.975060268649187,
          47.838247027327,
        ],
        Array [
          19.97507548894922,
          47.83818442980309,
        ],
        Array [
          19.97506947360976,
          47.83806650243118,
        ],
        Array [
          19.975029357667903,
          47.83795161915225,
        ],
        Array [
          19.97486193958522,
          47.837621634696745,
        ],
        Array [
          19.97483387931263,
          47.837288919553636,
        ],
        Array [
          19.97481250116543,
          47.83718796908534,
        ],
        Array [
          19.974766087918873,
          47.837090879664174,
        ],
        Array [
          19.974695966767335,
          47.83700042760722,
        ],
        Array [
          19.97456597346665,
          47.83686261971945,
        ],
        Array [
          19.97442346003821,
          47.83659621556948,
        ],
        Array [
          19.974349091150224,
          47.83649065156563,
        ],
        Array [
          19.974245804706445,
          47.83639668862718,
        ],
        Array [
          19.97411747416788,
          47.83631785063558,
        ],
        Array [
          19.973968912202263,
          47.83625709425771,
        ],
        Array [
          19.97380569019883,
          47.83621669805341,
        ],
        Array [
          19.97363392932937,
          47.83619817701489,
        ],
        Array [
          19.973460070991276,
          47.83620222574389,
        ],
        Array [
          19.973100070991272,
          47.83623422611256,
        ],
        Array [
          19.972935194230637,
          47.83625966862698,
        ],
        Array [
          19.972780347802747,
          47.83630541022624,
        ],
        Array [
          19.972641023679,
          47.836369828532334,
        ],
        Array [
          19.972522163297903,
          47.83645063874285,
        ],
        Array [
          19.972453580144993,
          47.836507022484696,
        ],
        Array [
          19.972430203151546,
          47.83651374602431,
        ],
        Array [
          19.97227418896549,
          47.83657152273711,
        ],
        Array [
          19.972138232560546,
          47.836648832636676,
        ],
        Array [
          19.97202768294573,
          47.83674263399686,
        ],
        Array [
          19.97118268294573,
          47.837627639546625,
        ],
        Array [
          19.97110629858221,
          47.837726785429595,
        ],
        Array [
          19.971058447869275,
          47.837833682675615,
        ],
        Array [
          19.970858447869272,
          47.83849868420494,
        ],
        Array [
          19.970841279277543,
          47.838596065806,
        ],
        Array [
          19.970847854183056,
          47.83869402735305,
        ],
        Array [
          19.970923560659433,
          47.83909382528368,
        ],
        Array [
          19.970883099643668,
          47.83934611200646,
        ],
        Array [
          19.97084307324486,
          47.83935124001687,
        ],
        Array [
          19.97068371762608,
          47.839393950398716,
        ],
        Array [
          19.970539368105946,
          47.839456219197515,
        ],
        Array [
          19.970415291438574,
          47.83953577440077,
        ],
        Array [
          19.970316014700327,
          47.83962971327575,
        ],
        Array [
          19.97024516011433,
          47.83973460828921,
        ],
        Array [
          19.97020531288962,
          47.83984663217481,
        ],
        Array [
          19.970199850468916,
          47.83993173053203,
        ],
        Array [
          19.970009212414173,
          47.84009245199042,
        ],
        Array [
          19.96992888771661,
          47.840172591937204,
        ],
        Array [
          19.969773574533566,
          47.84035807882149,
        ],
        Array [
          19.969659192964535,
          47.8403953267175,
        ],
        Array [
          19.9695135256657,
          47.840470712981876,
        ],
        Array [
          19.969393789147887,
          47.84056443332229,
        ],
        Array [
          19.969276670311324,
          47.84067780194586,
        ],
        Array [
          19.96916590747316,
          47.84071142583116,
        ],
        Array [
          19.969023560011195,
          47.84077959333026,
        ],
        Array [
          19.968903585383455,
          47.84086497907654,
        ],
        Array [
          19.968810529644582,
          47.84096434757432,
        ],
        Array [
          19.968747918844063,
          47.84107393350363,
        ],
        Array [
          19.968658916652075,
          47.84129087737784,
        ],
        Array [
          19.96802820112628,
          47.84166471288455,
        ],
        Array [
          19.96767906154386,
          47.84177026779225,
        ],
        Array [
          19.967548923322052,
          47.841818683370896,
        ],
        Array [
          19.96743247738332,
          47.841880852692796,
        ],
        Array [
          19.96724462805198,
          47.841999461712355,
        ],
        Array [
          19.967196477894323,
          47.84201452560157,
        ],
        Array [
          19.96712723814337,
          47.84204302136541,
        ],
        Array [
          19.96698053026293,
          47.842018685641506,
        ],
        Array [
          19.966765,
          47.84200107462572,
        ],
        Array [
          19.966282,
          47.84200107462572,
        ],
        Array [
          19.96613101298067,
          47.842009652070686,
        ],
        Array [
          19.965984321933895,
          47.842035140346624,
        ],
        Array [
          19.964758321933896,
          47.842324143515775,
        ],
        Array [
          19.964556722401237,
          47.842391779039914,
        ],
        Array [
          19.96393272240124,
          47.84267178174534,
        ],
        Array [
          19.963739528562865,
          47.84278893563243,
        ],
        Array [
          19.96360150371365,
          47.84290103791454,
        ],
        Array [
          19.963362794864352,
          47.843029220309084,
        ],
        Array [
          19.96322141008976,
          47.8431243073551,
        ],
        Array [
          19.962184358944803,
          47.84399792208362,
        ],
        Array [
          19.961958944416864,
          47.84413253966666,
        ],
        Array [
          19.96148727659194,
          47.84390698586159,
        ],
        Array [
          19.961329616850623,
          47.84384669492193,
        ],
        Array [
          19.96115712065442,
          47.84380889864562,
        ],
        Array [
          19.96032912065442,
          47.843687897271415,
        ],
        Array [
          19.96015420799645,
          47.84367419221338,
        ],
        Array [
          19.95997867247427,
          47.843683652852455,
        ],
        Array [
          19.95980925981955,
          47.84371591560917,
        ],
        Array [
          19.959652480465603,
          47.843769740603015,
        ],
        Array [
          19.959514359355083,
          47.84384305930659,
        ],
        Array [
          19.959400204404805,
          47.84393305404752,
        ],
        Array [
          19.95931440252549,
          47.84403626630159,
        ],
        Array [
          19.95926025103524,
          47.844148729613565,
        ],
        Array [
          19.959239830945457,
          47.84426612203589,
        ],
        Array [
          19.959253926988744,
          47.8443839322257,
        ],
        Array [
          19.95930199746206,
          47.84449763281589,
        ],
        Array [
          19.959382195044075,
          47.84460285439739,
        ],
        Array [
          19.95949143778668,
          47.84469555342691,
        ],
        Array [
          19.95962552755255,
          47.84477216760844,
        ],
        Array [
          19.95977931134718,
          47.844829752778764,
        ],
        Array [
          19.959946879345576,
          47.84486609603827,
        ],
        Array [
          19.9605948104292,
          47.844960780568044,
        ],
      ],
    ],
    "track": Array [
      Array [
        19.960138,
        47.844277,
        507.86468,
      ],
      Array [
        19.960966,
        47.844398,
        507.86468,
      ],
      Array [
        19.961677,
        47.844738,
        510.82683,
      ],
      Array [
        19.961925,
        47.844763,
        511.86159,
      ],
      Array [
        19.96234,
        47.844712,
        513.6415,
      ],
      Array [
        19.962839,
        47.844414,
        514.01338,
      ],
      Array [
        19.963924,
        47.8435,
        508.0311,
      ],
      Array [
        19.964235,
        47.843333,
        507.4217,
      ],
      Array [
        19.964432,
        47.843173,
        505.55983,
      ],
      Array [
        19.965056,
        47.842893,
        500.86863,
      ],
      Array [
        19.966282,
        47.842604,
        493.08466,
      ],
      Array [
        19.966765,
        47.842604,
        490.70485,
      ],
      Array [
        19.967398,
        47.842709,
        488.02781,
      ],
      Array [
        19.967576,
        47.842561,
        483.8412,
      ],
      Array [
        19.967755,
        47.842505,
        481.79085,
      ],
      Array [
        19.968048,
        47.84232,
        476.53015,
      ],
      Array [
        19.968521,
        47.842177,
        472.30818,
      ],
      Array [
        19.969454,
        47.841624,
        457.39057,
      ],
      Array [
        19.969614,
        47.841234,
        449.36496,
      ],
      Array [
        19.969851,
        47.84118,
        446.89692,
      ],
      Array [
        19.970132,
        47.840908,
        439.28796,
      ],
      Array [
        19.970398,
        47.840843,
        435.73038,
      ],
      Array [
        19.970712,
        47.840468,
        424.57916,
      ],
      Array [
        19.970986,
        47.840237,
        417.70967,
      ],
      Array [
        19.971107,
        47.840083,
        414.42057,
      ],
      Array [
        19.971095,
        47.83993,
        412.49989,
      ],
      Array [
        19.971387,
        47.840086,
        413.72731,
      ],
      Array [
        19.971748,
        47.840431,
        419.11002,
      ],
      Array [
        19.971982,
        47.840508,
        420.93228,
      ],
      Array [
        19.972077,
        47.840463,
        421.24784,
      ],
      Array [
        19.97182,
        47.840189,
        417.03635,
      ],
      Array [
        19.97182,
        47.840189,
        417.03635,
      ],
      Array [
        19.971659,
        47.839799,
        413.04688,
      ],
      Array [
        19.97176,
        47.839512,
        414.50614,
      ],
      Array [
        19.971828,
        47.839088,
        415.05464,
      ],
      Array [
        19.971739,
        47.838618,
        409.62211,
      ],
      Array [
        19.971939,
        47.837953,
        408.9397,
      ],
      Array [
        19.972784,
        47.837068,
        411.14911,
      ],
      Array [
        19.972784,
        47.837068,
        411.14911,
      ],
      Array [
        19.97301,
        47.837003,
        411.03913,
      ],
      Array [
        19.973218,
        47.836832,
        408.03474,
      ],
      Array [
        19.973578,
        47.8368,
        407.19849,
      ],
      Array [
        19.973754,
        47.837129,
        413.89729,
      ],
      Array [
        19.973937,
        47.837323,
        417.91868,
      ],
      Array [
        19.973972,
        47.837738,
        427.98568,
      ],
      Array [
        19.974179,
        47.838146,
        437.43456,
      ],
      Array [
        19.974179,
        47.838146,
        437.43456,
      ],
      Array [
        19.97412,
        47.838295,
        441.40978,
      ],
      Array [
        19.974327,
        47.838638,
        447.34857,
      ],
      Array [
        19.974582,
        47.83888,
        449.41355,
      ],
      Array [
        19.974699,
        47.839126,
        452.893,
      ],
      Array [
        19.97481739,
        47.83963549,
        452.893,
      ],
    ],
    "uphill": 65,
  },
}
`;

exports[`Route calculation tests toRouteSegmentsByWaypoints: empty route 1`] = `
Object {
  "_tag": "None",
}
`;

exports[`Route calculation tests toRouteSegmentsByWaypoints: empty waypoints 1`] = `
Object {
  "_tag": "Some",
  "value": Array [],
}
`;

exports[`Route calculation tests toRouteSegmentsByWaypoints: failed calculation with wrong coordinates 1`] = `
Object {
  "_tag": "None",
}
`;

exports[`Route calculation tests toRouteSegmentsByWaypoints: failed calculation with wrong indexes 1`] = `
Object {
  "_tag": "None",
}
`;

exports[`Route calculation tests toRouteSegmentsByWaypoints: less segments than route 1`] = `
Object {
  "_tag": "Some",
  "value": Array [
    Object {
      "averageTime": 0.9486005390609393,
      "coordinates": Array [
        Array [
          19.960138,
          47.844277,
          507.86468,
        ],
        Array [
          19.960966,
          47.844398,
          507.86468,
        ],
      ],
      "currentTime": 0.9486005390609393,
      "difficulty": 0,
      "distance": 63.24003593739595,
      "downhill": 0,
      "endPoint": Object {
        "elevation": 507.86468,
        "lat": 47.844398,
        "lon": 19.960966,
      },
      "geojsonFeature": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              19.960138,
              47.844277,
              507.86468,
            ],
            Array [
              19.960966,
              47.844398,
              507.86468,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "score": 1,
      "startPoint": Object {
        "elevation": 507.86468,
        "lat": 47.844277,
        "lon": 19.960138,
      },
      "uphill": 0,
    },
    Object {
      "averageTime": 1.2580029387964333,
      "coordinates": Array [
        Array [
          19.960966,
          47.844398,
          507.86468,
        ],
        Array [
          19.961677,
          47.844738,
          510.82683,
        ],
        Array [
          19.961925,
          47.844763,
          511.86159,
        ],
      ],
      "currentTime": 1.2580029387964333,
      "difficulty": 1,
      "distance": 83.8668625864289,
      "downhill": 0,
      "endPoint": Object {
        "elevation": 511.86159,
        "lat": 47.844763,
        "lon": 19.961925,
      },
      "geojsonFeature": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              19.960966,
              47.844398,
              507.86468,
            ],
            Array [
              19.961677,
              47.844738,
              510.82683,
            ],
            Array [
              19.961925,
              47.844763,
              511.86159,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "score": 2,
      "startPoint": Object {
        "elevation": 507.86468,
        "lat": 47.844398,
        "lon": 19.960966,
      },
      "uphill": 3.996909999999957,
    },
    Object {
      "averageTime": 3.1691642204542165,
      "coordinates": Array [
        Array [
          19.961925,
          47.844763,
          511.86159,
        ],
        Array [
          19.96234,
          47.844712,
          513.6415,
        ],
        Array [
          19.962839,
          47.844414,
          514.01338,
        ],
        Array [
          19.963924,
          47.8435,
          508.0311,
        ],
      ],
      "currentTime": 3.1691642204542165,
      "difficulty": 0,
      "distance": 211.27761469694778,
      "downhill": 5.982280000000003,
      "endPoint": Object {
        "elevation": 508.0311,
        "lat": 47.8435,
        "lon": 19.963924,
      },
      "geojsonFeature": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              19.961925,
              47.844763,
              511.86159,
            ],
            Array [
              19.96234,
              47.844712,
              513.6415,
            ],
            Array [
              19.962839,
              47.844414,
              514.01338,
            ],
            Array [
              19.963924,
              47.8435,
              508.0311,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "score": 4,
      "startPoint": Object {
        "elevation": 511.86159,
        "lat": 47.844763,
        "lon": 19.961925,
      },
      "uphill": 2.1517900000000054,
    },
  ],
}
`;

exports[`Route calculation tests toRouteSegmentsByWaypoints: longer segments than route 1`] = `
Object {
  "_tag": "Some",
  "value": Array [
    Object {
      "averageTime": 0.9486005390609393,
      "coordinates": Array [
        Array [
          19.960138,
          47.844277,
          507.86468,
        ],
        Array [
          19.960966,
          47.844398,
          507.86468,
        ],
      ],
      "currentTime": 0.9486005390609393,
      "difficulty": 0,
      "distance": 63.24003593739595,
      "downhill": 0,
      "endPoint": Object {
        "elevation": 507.86468,
        "lat": 47.844398,
        "lon": 19.960966,
      },
      "geojsonFeature": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              19.960138,
              47.844277,
              507.86468,
            ],
            Array [
              19.960966,
              47.844398,
              507.86468,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "score": 1,
      "startPoint": Object {
        "elevation": 507.86468,
        "lat": 47.844277,
        "lon": 19.960138,
      },
      "uphill": 0,
    },
    Object {
      "averageTime": 1.2580029387964333,
      "coordinates": Array [
        Array [
          19.960966,
          47.844398,
          507.86468,
        ],
        Array [
          19.961677,
          47.844738,
          510.82683,
        ],
        Array [
          19.961925,
          47.844763,
          511.86159,
        ],
      ],
      "currentTime": 1.2580029387964333,
      "difficulty": 1,
      "distance": 83.8668625864289,
      "downhill": 0,
      "endPoint": Object {
        "elevation": 511.86159,
        "lat": 47.844763,
        "lon": 19.961925,
      },
      "geojsonFeature": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              19.960966,
              47.844398,
              507.86468,
            ],
            Array [
              19.961677,
              47.844738,
              510.82683,
            ],
            Array [
              19.961925,
              47.844763,
              511.86159,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "score": 2,
      "startPoint": Object {
        "elevation": 507.86468,
        "lat": 47.844398,
        "lon": 19.960966,
      },
      "uphill": 3.996909999999957,
    },
    Object {
      "averageTime": 4.801498813728659,
      "coordinates": Array [
        Array [
          19.961925,
          47.844763,
          511.86159,
        ],
        Array [
          19.96234,
          47.844712,
          513.6415,
        ],
        Array [
          19.962839,
          47.844414,
          514.01338,
        ],
        Array [
          19.963924,
          47.8435,
          508.0311,
        ],
        Array [
          19.964235,
          47.843333,
          507.4217,
        ],
        Array [
          19.964432,
          47.843173,
          505.55983,
        ],
        Array [
          19.965056,
          47.842893,
          500.86863,
        ],
      ],
      "currentTime": 4.801498813728659,
      "difficulty": 0,
      "distance": 320.0999209152439,
      "downhill": 13.144749999999988,
      "endPoint": Object {
        "elevation": 500.86863,
        "lat": 47.842893,
        "lon": 19.965056,
      },
      "geojsonFeature": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              19.961925,
              47.844763,
              511.86159,
            ],
            Array [
              19.96234,
              47.844712,
              513.6415,
            ],
            Array [
              19.962839,
              47.844414,
              514.01338,
            ],
            Array [
              19.963924,
              47.8435,
              508.0311,
            ],
            Array [
              19.964235,
              47.843333,
              507.4217,
            ],
            Array [
              19.964432,
              47.843173,
              505.55983,
            ],
            Array [
              19.965056,
              47.842893,
              500.86863,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "score": 5,
      "startPoint": Object {
        "elevation": 511.86159,
        "lat": 47.844763,
        "lon": 19.961925,
      },
      "uphill": 2.1517900000000054,
    },
  ],
}
`;

exports[`Route calculation tests toRouteSegmentsByWaypoints: only one segment 1`] = `
Object {
  "_tag": "Some",
  "value": Array [
    Object {
      "averageTime": 0.9486005390609393,
      "coordinates": Array [
        Array [
          19.960138,
          47.844277,
          507.86468,
        ],
        Array [
          19.960966,
          47.844398,
          507.86468,
        ],
      ],
      "currentTime": 0.9486005390609393,
      "difficulty": 0,
      "distance": 63.24003593739595,
      "downhill": 0,
      "endPoint": Object {
        "elevation": 507.86468,
        "lat": 47.844398,
        "lon": 19.960966,
      },
      "geojsonFeature": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              19.960138,
              47.844277,
              507.86468,
            ],
            Array [
              19.960966,
              47.844398,
              507.86468,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "score": 1,
      "startPoint": Object {
        "elevation": 507.86468,
        "lat": 47.844277,
        "lon": 19.960138,
      },
      "uphill": 0,
    },
  ],
}
`;

exports[`Route calculation tests toRouteSegmentsByWaypoints: same segments than route 1`] = `
Object {
  "_tag": "Some",
  "value": Array [
    Object {
      "averageTime": 0.9486005390609393,
      "coordinates": Array [
        Array [
          19.960138,
          47.844277,
          507.86468,
        ],
        Array [
          19.960966,
          47.844398,
          507.86468,
        ],
      ],
      "currentTime": 0.9486005390609393,
      "difficulty": 0,
      "distance": 63.24003593739595,
      "downhill": 0,
      "endPoint": Object {
        "elevation": 507.86468,
        "lat": 47.844398,
        "lon": 19.960966,
      },
      "geojsonFeature": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              19.960138,
              47.844277,
              507.86468,
            ],
            Array [
              19.960966,
              47.844398,
              507.86468,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "score": 1,
      "startPoint": Object {
        "elevation": 507.86468,
        "lat": 47.844277,
        "lon": 19.960138,
      },
      "uphill": 0,
    },
    Object {
      "averageTime": 1.2580029387964333,
      "coordinates": Array [
        Array [
          19.960966,
          47.844398,
          507.86468,
        ],
        Array [
          19.961677,
          47.844738,
          510.82683,
        ],
        Array [
          19.961925,
          47.844763,
          511.86159,
        ],
      ],
      "currentTime": 1.2580029387964333,
      "difficulty": 1,
      "distance": 83.8668625864289,
      "downhill": 0,
      "endPoint": Object {
        "elevation": 511.86159,
        "lat": 47.844763,
        "lon": 19.961925,
      },
      "geojsonFeature": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              19.960966,
              47.844398,
              507.86468,
            ],
            Array [
              19.961677,
              47.844738,
              510.82683,
            ],
            Array [
              19.961925,
              47.844763,
              511.86159,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "score": 2,
      "startPoint": Object {
        "elevation": 507.86468,
        "lat": 47.844398,
        "lon": 19.960966,
      },
      "uphill": 3.996909999999957,
    },
    Object {
      "averageTime": 3.1691642204542165,
      "coordinates": Array [
        Array [
          19.961925,
          47.844763,
          511.86159,
        ],
        Array [
          19.96234,
          47.844712,
          513.6415,
        ],
        Array [
          19.962839,
          47.844414,
          514.01338,
        ],
        Array [
          19.963924,
          47.8435,
          508.0311,
        ],
      ],
      "currentTime": 3.1691642204542165,
      "difficulty": 0,
      "distance": 211.27761469694778,
      "downhill": 5.982280000000003,
      "endPoint": Object {
        "elevation": 508.0311,
        "lat": 47.8435,
        "lon": 19.963924,
      },
      "geojsonFeature": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              19.961925,
              47.844763,
              511.86159,
            ],
            Array [
              19.96234,
              47.844712,
              513.6415,
            ],
            Array [
              19.962839,
              47.844414,
              514.01338,
            ],
            Array [
              19.963924,
              47.8435,
              508.0311,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "score": 4,
      "startPoint": Object {
        "elevation": 511.86159,
        "lat": 47.844763,
        "lon": 19.961925,
      },
      "uphill": 2.1517900000000054,
    },
    Object {
      "averageTime": 1.6323345932744429,
      "coordinates": Array [
        Array [
          19.963924,
          47.8435,
          508.0311,
        ],
        Array [
          19.964235,
          47.843333,
          507.4217,
        ],
        Array [
          19.964432,
          47.843173,
          505.55983,
        ],
        Array [
          19.965056,
          47.842893,
          500.86863,
        ],
      ],
      "currentTime": 1.6323345932744429,
      "difficulty": 0,
      "distance": 108.82230621829619,
      "downhill": 7.162469999999985,
      "endPoint": Object {
        "elevation": 500.86863,
        "lat": 47.842893,
        "lon": 19.965056,
      },
      "geojsonFeature": Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              19.963924,
              47.8435,
              508.0311,
            ],
            Array [
              19.964235,
              47.843333,
              507.4217,
            ],
            Array [
              19.964432,
              47.843173,
              505.55983,
            ],
            Array [
              19.965056,
              47.842893,
              500.86863,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      "score": 2,
      "startPoint": Object {
        "elevation": 508.0311,
        "lat": 47.8435,
        "lon": 19.963924,
      },
      "uphill": 0,
    },
  ],
}
`;
